--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a class="main-logo">
           <img src="img/logo-technomart.svg" width="" height="" alt="логотип интернет-магазина «Техномарт»">
         </a>
-        <form class="form-search" action="#" method="GET">
+        <form class="form-search" action="#" method="post">
           <input type="search" name="search" id="search" placeholder="Поиск:">
           <label class="search-label" for="search"></label>
         </form>
@@ -28,16 +28,16 @@
           <p class="address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
         </div>
         <ul class="user-info">
-          <li class="login">Войти</li>
-          <li class="registration">Регистрация</li>
+          <li><a class="login" href="#">Войти</a></li>
+          <li><a class="registration" href="#">Регистрация</a></li>
         </ul>
       </div>
 
       <nav class="navigation">
         <ul class="site-navigation">
-          <li><a href="#">Главная</a></li>
+          <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
-          <li><a href="#">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="#">Спецпредложения</a></li>
           <li><a href="#">Доставка</a></li>
@@ -81,13 +81,13 @@
                 <p class="promo-slider-title">Перфораторы</p>
                 <span class="promo-slider-description">Настоящие мужские игрушки</span>
                 <img src="img/drill-1.jpg" width="620" height="266" alt="Перфораторы">
-                <a class="promo-slider-btn" href="#">Открыть каталог</a>
+                <a class="promo-slider-btn" href="catalog.html">Открыть каталог</a>
               </div>
               <div class="promo-slide-second">
                 <p class="promo-slider-title">Дрели</p>
                 <span class="promo-slider-description">Соседям на радость!</span>
                 <img src="img/drill-2.jpg" width="620" height="266" alt="Дрели">
-                <a class="promo-slider-btn" href="#">Открыть каталог</a>
+                <a class="promo-slider-btn" href="catalog.html">Открыть каталог</a>
               </div>  
             </div>
           </div>
@@ -161,28 +161,28 @@
         </div>
         <article class="producers">
           <div class="producers-img">
-            <img src="img/bosch.png" width="126" height="37" alt="BOSCH">
+            <a href="#"><img src="img/bosch.png" width="126" height="37" alt="BOSCH"></a>
           </div>
           <div class="producers-img">
-            <img src="img/makita.png" width="123" height=40"" alt="Makita">
+              <a href="#"><img src="img/makita.png" width="123" height=40"" alt="Makita"></a>
           </div>
           <div class="producers-img">
-            <img src="img/dewalt.png" width="146" height="44" alt="DeWalt">
+              <a href="#"><img src="img/dewalt.png" width="146" height="44" alt="DeWalt"></a>
           </div>
           <div class="producers-img">
-            <img src="img/interskol.png" width="200" height="88" alt="Интерскол">
+              <a href="#"><img src="img/interskol.png" width="200" height="88" alt="Интерскол"></a>
           </div>
           <div class="producers-img">
-            <img src="img/hitachi.png" width="169" height="31" alt="Hitachi">
+              <a href="#"><img src="img/hitachi.png" width="169" height="31" alt="Hitachi"></a>
           </div>
           <div class="producers-img">
-            <img src="img/lg.png" width="121" height="73" alt="LG">
+              <a href="#"><img src="img/lg.png" width="121" height="73" alt="LG"></a>
           </div>
           <div class="producers-img">
-            <img src="img/aeg.png" width="151" height="96" alt="AEG">
+              <a href="#"><img src="img/aeg.png" width="151" height="96" alt="AEG"></a>
           </div>
           <div class="producers-img">
-            <img src="img/metabo.png" width="204" height="69" alt="Metabo">
+              <a href="#"><img src="img/metabo.png" width="204" height="69" alt="Metabo"></a>
           </div>      
         </article>
       </section>
@@ -242,7 +242,7 @@
           <h2>Контакты</h2>
           <p class="description">Вы можете забрать товар сами, заехав в наш офис:</p>
           <div class="map-img">
-            <img src="img/map.png" width="300" height="158" alt="Наш адрес">
+            <img src="img/map.png" width="300" height="158" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
           </div>
           <a href="#" class="btn">Заблудились? Напишите нам!</a>
         </section>
@@ -259,7 +259,7 @@
         <ul class="site-navigation">
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
-          <li><a href="#">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Доставка</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
@@ -274,9 +274,21 @@
       <div class="footer-bottom">
         <p class="copyright">&copy; 2010-2019 Компания «Техномарт» Все права защищены</p>
         <ul class="social">
-          <li><a class="social-btn social-btn-vk" href="#">Вконтакте</a></li>
-          <li><a class="social-btn social-btn-fb" href="#">Фейсбук</a></li>
-          <li><a class="social-btn social-btn-ig" href="#">Инстаграм</a></li>
+          <li>
+            <a class="social-btn social-btn-vk" href="#">Вконтакте
+              <span class="visually-hidden">«Техномарт» Вконтакте</span>
+            </a>
+          </li>
+          <li>
+            <a class="social-btn social-btn-fb" href="#">Фейсбук
+              <span class="visually-hidden">«Техномарт» в Фейсбук</span>
+            </a>
+          </li>
+          <li>
+            <a class="social-btn social-btn-ig" href="#">Инстаграм
+              <span class="visually-hidden">«Техномарт» в Инстаграм</span>
+            </a>
+          </li>
         </ul>
         <p class="feedback">Обратная связь:
           <a class="yellow-text" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
@@ -288,19 +300,22 @@
     </footer>
 
     <section class="modal modal-map">
-      <span class="modal-close">x</span>
+      <h2 class="visually-hidden">Как нас найти</h2>
+      <img src="img/map-popup.png" width="943" height="449" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
+      <button class="modal-map-close" type="button">Закрыть</button>
     </section>
 
     <section class="modal modal-login">
+      <h2 class="visually-hidden">Форма обратной связи</h2>
       <form action="#" method="post">
         <label for="your-name">Ваше имя:</label>
         <input type="text" id="your-name" name="name" placeholder="Представьтесь, пожалуйста">
         <label for="your-email">Ваш e-mail:</label>
         <input type="email" id="your-email" name="e-mail" placeholder="Для отправки ответа">
-        <p>Текст письма:</p>
-        <p><textarea placeholder="В свободной форме"></textarea></p>
+        <p><label for="your-message">Текст письма:</label>
+        <p><textarea id="your-message" placeholder="В свободной форме"></textarea></p>
         <p><input type="submit" value="Отправить"></p>
-        <span class="modal-close">x</span>
+        <button class="modal-login-close" type="button">Закрыть</button>
       </form>
     </section>
   </body>
