--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
         <a class="main-logo">
           <img src="img/logo-technomart.svg" width="" height="" alt="логотип интернет-магазина «Техномарт»">
         </a>
-        <form class="form-search" action="#" method="GET">
+        <form class="form-search" action="#" method="post">
           <input type="search" name="search" id="search" placeholder="Поиск:">
           <label class="search-label" for="search"></label>
         </form>
@@ -36,9 +36,9 @@
 
       <nav class="navigation">
         <ul class="site-navigation">
-          <li><a href="#">Главная</a></li>
+          <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
-          <li><a href="#">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="#">Спецпредложения</a></li>
           <li><a href="#">Доставка</a></li>
@@ -48,52 +48,80 @@
     </header>
 
     <main class="container">
-      <div class="path">
-        <ul class="path-items">
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Инструмент</a></li>
-          <li><a href="#">Перфораторы</a></li>
-        </ul>
-      </div>
+      <ul class="breadcrumbs">
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><span>Перфораторы</span></li>
+      </ul>
 
       <h2>Перфораторы</h2>
       <section class="catalog">
         <div class="catalog-sidebar">
           <p class="filter-title">Фильтр:</p>
-          <form class="catalog-filter" action="#" method="GET">
+          <h2 class="visually-hidden">Фильтр товаров</h2>
+          <form class="catalog-filter" action="#" method="post">
             <section class="cost-range">
               <h3>Цена:</h3>
               <div class="cost-range-block">
                 <div class="cost-value">
-                  <span></span>
-                  <span></span>
+                  <span class="value-left"></span>
+                  <span class="value-right"></span>
                 </div>
                 <input type="number" name="number" id="min-value" placeholder="0">
+                <label for="min-value"></label>
+                <span>—</span>
                 <input type="number" name="number" id="max-value" placeholder="3000">
+                <label for="max-value"></label>
               </div>
             </section>
 
-            <section class="filter-producers">
-              <h3>Производители:</h3>
-              <p class="checkbox"><input type="checkbox" name="option-1" value="BOSCH" checked>BOSCH</p>
-              <p class="checkbox"><input type="checkbox" name="option-2" value="Интерскол">Интерскол</p>
-              <p class="checkbox"><input type="checkbox" name="option-3" value="Makita" checked>Makita</p>
-              <p class="checkbox"><input type="checkbox" name="option-4" value="DeWalt">DeWalt</p>
-              <p class="checkbox"><input type="checkbox" name="option-5" value="Hitachi">Hitachi</p>
-            </section>
+            <fieldset class="filter-producers">
+              <legend class="filter-producers-title">Производители:</legend>
+              <ul>
+                <li class="filter-producers-option">
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="option-1" id="filter-bosch" value="BOSCH" checked>
+                  <label for="filter-bosch">BOSCH</label>
+                </li>
+                <li class="filter-producers-option">
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="option-2" id="filter-interskol" value="Интерскол">
+                  <label for="filter-interskol">Интерскол</label>
+                </li>
+                <li class="filter-producers-option">
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="option-3" id="filter-makita" value="Makita" checked>
+                  <label for="filter-makita">Makita</label>
+                </li>
+                <li class="filter-producers-option">
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="option-4" id="filter-dewalt" value="DeWalt">
+                  <label for="filter-dewalt">DeWalt</label>
+                </li>
+                <li class="filter-producers-option">
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="option-5" id="filter-hitachi" value="Hitachi">
+                  <label for="filter-hitachi">Hitachi</label>
+                </li>
+              </ul>
+            </fieldset>
 
-            <section class="filter-power">
-              <h3>Питание:</h3>
-              <p class="checkbox"><input type="radio" name="option-6" value="Аккумуляторные" checked>Аккумуляторные</p>
-              <p class="checkbox"><input type="radio" name="option-7" value="Сетевые">Сетевые</p>
-            </section>
-            <button type="button" class="show-bnt">Показать</button>
+            <fieldset class="filter-power">
+              <legend class="filter-power-title">Питание:</legend>
+              <ul>
+                <li class="filter-option">
+                  <input class="visually-hidden filter-input filter-input-radio" type="radio" name="option-6" id="filter-battery" value="battery" checked>
+                  <label for="battery">Аккумуляторные</label>
+                </li>
+                <li class="filter-option">
+                  <input class="visually-hidden filter-input filter-input-radio" type="radio" name="option-7" id="filter-mains" value="mains">
+                  <label for="battery">Сетевые</label>
+                </li>
+              </ul>
+            </fieldset>
+            <button type="submit" class="filter-show-bnt">Показать</button>
           </form>
         </div>
 
-        <div class="catalog-content"></div>
+        <div class="catalog-content">
           <div class="catalog-sorting">
             <p class="sorting">Сортировка:</p>
+            <h2 class="visually-hidden">Сортировка товаров</h2>
             <a class="price active" href="#">По цене</a>
             <a class="type" href="#">По типу</a>
             <a class="functional" href="#">По функционалу</a>
@@ -104,6 +132,7 @@
           </div>
 
           <div class="products-list">
+          <h2 class="visually-hidden">Список товаров</h2>
             <article class="product">
               <div class="product-image">
                 <img src="img/bfg-3000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
@@ -220,10 +249,10 @@
           </div>
 
           <div class="pagination">
-            <a class="page active" href="#">1</a>
-            <a class="page" href="#">2</a>
-            <a class="page" href="#">3</a>
-            <a class="page next" href="#">Следующая</a>
+            <a class="pagination-link-active" href="#">1</a>
+            <a class="pagination-link" href="#">2</a>
+            <a class="pagination-link" href="#">3</a>
+            <a class="pagination-link-next" href="#">Следующая</a>
           </div>
         </div>
       </section>
@@ -245,7 +274,7 @@
         <ul class="site-navigation">
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
-          <li><a href="#">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Доставка</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
@@ -260,9 +289,21 @@
       <div class="footer-bottom">
         <p class="copyright">&copy; 2010-2019 Компания «Техномарт» Все права защищены</p>
         <ul class="social">
-          <li><a class="social-btn social-btn-vk" href="#">Вконтакте</a></li>
-          <li><a class="social-btn social-btn-fb" href="#">Фейсбук</a></li>
-          <li><a class="social-btn social-btn-ig" href="#">Инстаграм</a></li>
+          <li>
+            <a class="social-btn social-btn-vk" href="#">Вконтакте
+              <span class="visually-hidden">«Техномарт» Вконтакте</span>
+            </a>
+          </li>
+          <li>
+            <a class="social-btn social-btn-fb" href="#">Фейсбук
+              <span class="visually-hidden">«Техномарт» в Фейсбук</span>
+            </a>
+          </li>
+          <li>
+            <a class="social-btn social-btn-ig" href="#">Инстаграм
+              <span class="visually-hidden">«Техномарт» в Инстаграм</span>
+            </a>
+          </li>
         </ul>
         <p class="feedback">Обратная связь:
           <a class="yellow-text" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
@@ -272,5 +313,16 @@
         </p>
       </div>
     </footer>
+
+    <section class="modal modal-cart">
+      <h2 class="Добавление товаров в корзину">Как нас найти</h2>
+      <div class="modal-cart-icon"></div>
+      <p class="modal-cart-description">Товар добавлен в корзину!</p>
+      <div class="modal-cart-btn">
+        <a href="#">Оформить заказ</a>
+        <a href="#">Продолжить покупки</a>
+      </div>
+      <button class="modal-cart-close" type="button">Закрыть</button>
+    </section>
   </body>
 </html>
