--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="header-top">
         <a class="main-logo">
-          <img src="img/logo-technomart.svg" width="" height="" alt="логотип интернет-магазина «Техномарт»">
+          <img src="img/header-logo.svg" width="220" height="47" alt="логотип интернет-магазина «Техномарт»">
         </a>
         <form class="form-search" action="#" method="post">
           <input type="search" name="search" id="search" placeholder="Поиск:">
@@ -49,23 +52,23 @@
     <main class="container">
       <section class="promo">
         <div class="promo-block promo-block-materials">
-          <p>Материалы</p>
+          <p class="promo-block-title">Материалы</p>
           <a class="promo-btn" href="#">На любой вкус</a>
         </div>
         <div class="promo-block promo-block-tools">
-          <p>Инструменты</p>
+          <p class="promo-block-title">Инструменты</p>
           <a class="promo-btn" href="#">На все случаи</a>
         </div>
         <div class="promo-block promo-block-technics">
-          <p>Техника</p>
+          <p class="promo-block-title">Техника</p>
           <a class="promo-btn" href="#">Для стройки</a>
         </div>
         <div class="promo-block promo-block-discounts">
-          <p>Скидки 50%</p>
+          <p class="promo-block-title">Скидки 50%</p>
           <a class="promo-btn" href="#">На 350 товаров</a>
         </div> 
         <div class="promo-block promo-block-delivery">
-          <p>Доставка</p>
+          <p class="promo-block-title">Доставка</p>
           <a class="promo-btn" href="#">Бесплатно</a>
         </div>
         <div class="promo-slider">
@@ -81,13 +84,13 @@
                 <p class="promo-slider-title">Перфораторы</p>
                 <span class="promo-slider-description">Настоящие мужские игрушки</span>
                 <img src="img/drill-1.jpg" width="620" height="266" alt="Перфораторы">
-                <a class="promo-slider-btn" href="catalog.html">Открыть каталог</a>
+                <a class="btn promo-slider-btn" href="catalog.html">Открыть каталог</a>
               </div>
               <div class="promo-slide-second">
                 <p class="promo-slider-title">Дрели</p>
                 <span class="promo-slider-description">Соседям на радость!</span>
                 <img src="img/drill-2.jpg" width="620" height="266" alt="Дрели">
-                <a class="promo-slider-btn" href="catalog.html">Открыть каталог</a>
+                <a class="btn promo-slider-btn" href="catalog.html">Открыть каталог</a>
               </div>  
             </div>
           </div>
@@ -97,7 +100,7 @@
       <section class="popular-goods">
         <div class="popular">
           <h2>Популярные товары:</h2>
-          <a class="popular-btn" href="#">Все популярные товары</a>
+          <a class="btn popular-btn" href="#">Все популярные товары</a>
         </div>
 
         <div class="products-list">
@@ -157,7 +160,7 @@
       <section class="popular-producers">
         <div class="popular">
           <h2>Популярные производители:</h2>
-          <a class="popular-btn" href="#">Все производители</a>
+          <a class="btn popular-btn" href="#">Все производители</a>
         </div>
         <article class="producers">
           <div class="producers-img">
@@ -201,25 +204,25 @@
           </div>
           <div class="service-sliders">
             <div class="service-sliders-delivery">
-              <h3>Доставка</h3>
-              <p class="sliders-delivery">Мы с удовольствием доставим ваш товар прямо<br>
+              <p class="service-sliders-title">Доставка</p>
+              <p class="sliders-description">Мы с удовольствием доставим ваш товар прямо<br>
               к вашему подъезду совершенно бесплатно!
               Ведь мы неплохо заработаем,</br>
               поднимая его на ваш этаж!</p>
             </div>
             <div class="service-sliders-guarantee">
-              <h3>Гарантия</h3>
-              <p class="service-sliders-guarantee">Если купленный у нас товар поломается или заискрит,<br>
+              <p class="service-sliders-title">Гарантия</p>
+              <p class="service-sliders-description">Если купленный у нас товар поломается или заискрит,<br>
               а также в случае пожара, спровоцированного его возгоранием,
               вы всегда можете быть уверены в нашей гарантии. Мы обменяем
               сгоревший товар на новый.</br>
               Дом уж восстановите как-нибудь сами.</p>
             </div>
             <div class="service-sliders-credit">
-              <h3>Кредит</h3>
-              <p class="service-sliders-credit">Залезть в долговую яму стало проще!<br>
+              <p class="service-sliders-title">Кредит</p>
+              <p class="service-sliders-description">Залезть в долговую яму стало проще!<br>
               Кредитные консультанты придут вам на помощь.</p>
-              <a class="service-sliders-btn" href="#">Отправить заявку</a>
+              <a class="btn service-sliders-btn" href="#">Отправить заявку</a>
             </div>
           </div>
         </div>
@@ -228,23 +231,23 @@
       <div class="company-contacts">
         <section class="about-us">
           <h2>Компания «ТЕХНОМАРТ»</h2>
-          <p class="about-us-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.</p>
-          <p class="about-us-description">Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
+          <p class="company-contacts-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.</p>
+          <p class="company-contacts-description">Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
           <ul class="delivery-companies">
             <li>Деловые линии</li>
             <li>Автотрейдинг</li>
             <li>ЖелДорЭскпедиция</li>
           </ul>
-          <a class="about-us-btn" href="#">Подробнее о компании</a>
+          <a class="btn about-us-btn" href="#">Подробнее о компании</a>
         </section>
 
         <section class="contacts">
           <h2>Контакты</h2>
-          <p class="description">Вы можете забрать товар сами, заехав в наш офис:</p>
+          <p class="company-contacts-description">Вы можете забрать товар сами, заехав в наш офис:</p>
           <div class="map-img">
             <img src="img/map.png" width="300" height="158" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
           </div>
-          <a href="#" class="btn">Заблудились? Напишите нам!</a>
+          <a href="#" class="btn contacts-btn">Заблудились? Напишите нам!</a>
         </section>
       </div>
     </main>
@@ -252,27 +255,27 @@
     <footer class="main-footer">
       <div class="footer-top">
         <a class="main-logo-footer">
-          <img src="img/logo-technomart.svg" width="" height="" alt="логотип интернет-магазина «Техномарт»">
+          <img src="img/footer-logo.svg" width="220" height="68" alt="логотип интернет-магазина «Техномарт»">
         </a>
         <p class="address-footer">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8
         +7 (812) 555-05-55</p>
-        <ul class="site-navigation">
+        <ul class="footer-site-navigation">
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Доставка</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-        <ul class="site-navigation-footer">
-          <li><a href="#">Материалы</a></li>
-          <li><a href="#">Техника</a></li>
-          <li><a href="#">Инструмент</a></li>
-          <li><a href="#">Спецпредложения</a></li>
+        <ul class="footer-site-navigation">
+          <li><a class="yellow-text" href="#">Материалы</a></li>
+          <li><a class="yellow-text" href="#">Техника</a></li>
+          <li><a class="yellow-text" href="#">Инструмент</a></li>
+          <li><a class="yellow-text" href="#">Спецпредложения</a></li>
         </ul>
       </div> 
 
       <div class="footer-bottom">
-        <p class="copyright">&copy; 2010-2019 Компания «Техномарт» Все права защищены</p>
+        <p class="footer-contacts copyright">&copy; 2010-2019 Компания «Техномарт» Все права защищены</p>
         <ul class="social">
           <li>
             <a class="social-btn social-btn-vk" href="#">Вконтакте
@@ -290,10 +293,10 @@
             </a>
           </li>
         </ul>
-        <p class="feedback">Обратная связь:
+        <p class="footer-contacts feedback">Обратная связь:
           <a class="yellow-text" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
-        <p class="feedback">Разработано -
+        <p class="footer-contacts feedback">Разработано -
           <a class="yellow-text" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
         </p>
       </div>
@@ -309,12 +312,12 @@
       <h2 class="visually-hidden">Форма обратной связи</h2>
       <form action="#" method="post">
         <label for="your-name">Ваше имя:</label>
-        <input type="text" id="your-name" name="name" placeholder="Представьтесь, пожалуйста">
+        <input type="text" id="your-name" name="name" placeholder="Имя Фамилия">
         <label for="your-email">Ваш e-mail:</label>
-        <input type="email" id="your-email" name="e-mail" placeholder="Для отправки ответа">
+        <input type="email" id="your-email" name="e-mail" placeholder="email@example.com">
         <p><label for="your-message">Текст письма:</label>
         <p><textarea id="your-message" placeholder="В свободной форме"></textarea></p>
-        <p><input type="submit" value="Отправить"></p>
+        <p><button class="btn" type="submit" value="Отправить">Отправить</button></p>
         <button class="modal-login-close" type="button">Закрыть</button>
       </form>
     </section>
